classDiagram
    class ECGChunk {
        +str session_id
        +str patient_id
        +str ts_start
        +int fs
        +list~str~ lead
        +list~list~float~~ samples
    }

    class ECGBeatEvent {
        +str session_id
        +str record_name
        +float beat_ts_sec
        +str true_sym
        +int fs
        +list~list~float~~ seg
        +list~float~ rr4
        +list~float~ m8
        +list~int~ channels_used
        +int seg_len
    }

    class BeatPrediction {
        +str session_id
        +float beat_ts_sec
        +str pred_class
        +float confidence
        +float pA
        +str model_version
        +dict probs
        +bool gated_A
    }

    class Alert {
        +str alert_id
        +str session_id
        +str start_time
        +str last_update
        +str alert_type
        +str status
        +float severity
        +str model_version
        +dict evidence
        +ack(user_id, reason, note)
        +dismiss(user_id, reason, note)
    }

    class AlertAction {
        +str action_id
        +str alert_id
        +str user_id
        +str action_time
        +str action_type
        +str reason
        +str note
    }

    class Session {
        +str session_id
        +str patient_id
        +str start_time
        +str end_time
        +str source_type
        +str status
        +str record_name
        +start()
        +stop()
    }

    class Settings {
        +float thr_A
        +int V_WINDOW
        +int V_THRESH
        +int COOLDOWN_V
        +int A_WINDOW
        +int A_THRESH
        +int COOLDOWN_A
        +float STREAM_CHUNK_SEC
        +float REALTIME_SPEED
        +update(key, value, changed_by)
    }

    class ModelVersion {
        +str model_version_id
        +str name
        +str artifact_uri
        +dict metrics_json
        +str deployed_at
        +bool is_active
    }

    class User {
        +str user_id
        +str role_id
        +str username
        +str password_hash
        +str display_name
        +str created_at
        +bool is_active
        +verify_password(password) bool
    }

    class Role {
        +str role_id
        +str name
    }

    Session "1" --> "*" BeatPrediction : contains
    Session "1" --> "*" Alert : triggers
    Alert "1" --> "*" AlertAction : has
    User "1" --> "*" AlertAction : performs
    Role "1" --> "*" User : has
    ModelVersion "1" --> "*" BeatPrediction : produces
